@@ -64,7 +64,8 @@ pipeline {
                         -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/ \
                         -Dsonar.junit.reportsPath=target/surefire-reports/ \
                         -Dsonar.jacoco.reportsPath=target/jacoco.exec \
-                        -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml'''
+                        -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml \
+                        -Dsonar.scanner.javaAdditionalOpts="--add-opens java.base/java.lang=ALL-UNNAMED"'''
                 }
 
                 timeout(time: 10, unit: 'MINUTES') {
